kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-catalog
  labels:
    app: ms-catalog
spec:
  type: ClusterIP
  ports:
    - name: "web"
      port: 3000
      targetPort: 3000
  selector:
    app: ms-catalog
