kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-catalog
spec:
  ingressClassName: nginx
  rules:
    - host: ms-catalog.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: ms-catalog
                port:
                  number: 5001
            path: /
